--- a/app/src/main/res/layout/weight_info_rat.xml
+++ b/app/src/main/res/layout/weight_info_rat.xml
@@ -16,7 +16,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Prawidłowa waga szynszyla"
+                android:text="Prawidłowa waga szczura"
                 android:textColor="#014D70"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -30,7 +30,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Prawidłowa waga szynszyla na podstawie jego wieku (opracowanie własne według różnych źródeł):"
+                android:text="Prawidłowa waga szczura na podstawie jego wieku (opracowanie własne według różnych źródeł). Należy pamiętać, że samce zazwyczaj są znacznie cięższe od samic. Poniższa tabela bierze pod uwagę średnią obu płci:"
                 android:textColor="#014D70"
                 android:textSize="16sp" />
 
@@ -92,7 +92,7 @@
                         android:layout_weight="1"
                         android:background="@drawable/table_border"
                         android:gravity="center"
-                        android:text="30 g - 100 g"
+                        android:text="6 g - 55 g"
                         android:textColor="#014D70"
                         android:textSize="16sp" />
 
@@ -121,7 +121,7 @@
                         android:layout_weight="1"
                         android:background="@drawable/table_border"
                         android:gravity="center"
-                        android:text="70 g - 150 g"
+                        android:text="25 g - 95 g"
                         android:textColor="#014D70"
                         android:textSize="16sp" />
 
@@ -150,7 +150,7 @@
                         android:layout_weight="1"
                         android:background="@drawable/table_border"
                         android:gravity="center"
-                        android:text="100 g - 250 g"
+                        android:text="80 g - 190 g"
                         android:textColor="#014D70"
                         android:textSize="16sp" />
 
@@ -169,7 +169,7 @@
                         android:layout_weight="1"
 
                         android:gravity="center"
-                        android:text="2 - 4 miesiące"
+                        android:text="2 - 6 miesiący"
                         android:textColor="#014D70"
                         android:textSize="16sp" />
 
@@ -179,7 +179,7 @@
                         android:layout_weight="1"
                         android:background="@drawable/table_border"
                         android:gravity="center"
-                        android:text="200 g - 350g"
+                        android:text="160 g - 390g"
                         android:textColor="#014D70"
                         android:textSize="16sp" />
 
@@ -198,7 +198,7 @@
                         android:layout_weight="1"
 
                         android:gravity="center"
-                        android:text="4 - 7 miesięcy"
+                        android:text="6 - 12 miesięcy"
                         android:textColor="#014D70"
                         android:textSize="16sp" />
 
@@ -208,36 +208,7 @@
                         android:layout_weight="1"
                         android:background="@drawable/table_border"
                         android:gravity="center"
-                        android:text="300 g - 480 g"
-                        android:textColor="#014D70"
-                        android:textSize="16sp" />
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@drawable/table_border">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-
-                        android:gravity="center"
-                        android:text="7 - 12 miesięcy"
-                        android:textColor="#014D70"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/table_border"
-                        android:gravity="center"
-                        android:text="380 g - 560 g"
+                        android:text="260 g - 610 g"
                         android:textColor="#014D70"
                         android:textSize="16sp" />
 
@@ -266,7 +237,7 @@
                         android:layout_weight="1"
                         android:background="@drawable/table_border"
                         android:gravity="center"
-                        android:text="420 g - 800 g"
+                        android:text="330 g - 670 g"
                         android:textColor="#014D70"
                         android:textSize="16sp" />
 
