--- a/app/src/main/res/layout/app_bar_rodents.xml
+++ b/app/src/main/res/layout/app_bar_rodents.xml
@@ -9,13 +9,13 @@
     app:popupTheme="@style/CustomPopupToolbar">
 
     <TextView
+        android:id="@+id/textViewYourRodent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
         android:layout_marginEnd="25dp"
         android:text="Twoje pupile"
         android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        />
+        android:textSize="24sp" />
 
 </androidx.appcompat.widget.Toolbar>
