--- a/app/src/main/res/layout/notes_item_list.xml
+++ b/app/src/main/res/layout/notes_item_list.xml
@@ -47,9 +47,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
+            android:backgroundTint="#014D70"
             android:hint="Temat notatki"
             android:maxLines="2"
             android:textColor="#014D70"
+            android:textColorHint="#707070"
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -103,9 +105,11 @@
                 android:autoSizeMinTextSize="12sp"
                 android:autoSizeStepGranularity="2sp"
                 android:autoSizeTextType="uniform"
+                android:backgroundTint="#014D70"
                 android:hint="Treść notatki"
                 android:maxLines="20"
                 android:textColor="#014D70"
+                android:textColorHint="#707070"
                 android:textSize="24sp" />
         </LinearLayout>
 
