--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -57,6 +57,7 @@
                             android:layout_marginStart="10dp"
                             android:layout_marginTop="20dp"
                             android:layout_marginEnd="10dp"
+                            android:backgroundTint="#014D70"
                             android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890!@#$%^&amp;*-+=,./?;'\|"
                             android:drawableStart="@drawable/ic_login"
                             android:drawablePadding="10dp"
@@ -106,6 +107,7 @@
                             android:layout_marginStart="10dp"
                             android:layout_marginTop="10dp"
                             android:layout_marginEnd="10dp"
+                            android:backgroundTint="#014D70"
                             android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890!@#$%^&amp;*-+=,./?;'\|"
                             android:drawableStart="@drawable/ic_password"
                             android:drawablePadding="10dp"
@@ -142,6 +144,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:layout_marginEnd="10dp"
+                            android:backgroundTint="#014D70"
                             android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890!@#$%^&amp;*-+=,./?;'\|"
                             android:drawableStart="@drawable/ic_password"
                             android:drawablePadding="10dp"
