--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -87,5 +87,18 @@
     </style>
 
 
+    <style name="SwitchColor" parent="Theme.AppCompat.Light">
+        <!-- active thumb & track color (30% transparency) -->
+        <item name="colorControlActivated">#a9e889</item>
+
+        <!-- inactive thumb color -->
+        <item name="colorSwitchThumbNormal">#c27e7e</item>
+
+        <!-- inactive track color (30% transparency) -->
+        <item name="android:colorForeground">#e31414
+        </item>
+    </style>
+
+
 
 </resources>
