--- a/app/src/main/res/layout/treats_cagesupply.xml
+++ b/app/src/main/res/layout/treats_cagesupply.xml
@@ -50,11 +50,14 @@
                     android:animationCache="true"
                     app:tabBackground="@drawable/tablayout_design"
 
+                    app:tabGravity="fill"
                     app:tabIconTint="@null"
                     app:tabIndicatorColor="@color/white"
-                    app:tabIndicatorHeight="4dp"
 
+                    app:tabIndicatorHeight="4dp"
                     app:tabInlineLabel="false"
+                    app:tabMaxWidth="0dp"
+                    app:tabMode="fixed"
                     app:tabSelectedTextColor="@color/white" />
 
                 <View
@@ -157,7 +160,7 @@
 
                     <androidx.viewpager2.widget.ViewPager2
                         android:id="@+id/pager"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
 
                         android:layout_height="0dp"
                         android:layout_weight="1">
