UI changes and minor fixes; unlocked guinea pig

--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -41,7 +41,7 @@
                 android:layout_gravity="center"
                 android:adjustViewBounds="true"
                 android:contentDescription="Guinea pig"
-                app:srcCompat="@drawable/rodent_icon1_not" />
+                app:srcCompat="@drawable/rodent_icon1" />
         </androidx.cardview.widget.CardView>
 
         <View
