--- a/app/src/main/res/layout/weight_list.xml
+++ b/app/src/main/res/layout/weight_list.xml
@@ -25,9 +25,9 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_marginEnd="5dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -55,9 +55,8 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="25dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:gravity="center|top"
                 android:orientation="horizontal">
 
