--- a/app/src/main/res/layout/medicaments_item_list.xml
+++ b/app/src/main/res/layout/medicaments_item_list.xml
@@ -3,6 +3,7 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/scrollViewMedicaments"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#ACC5E1">
