--- a/app/src/main/res/layout/activity_encyclopedia.xml
+++ b/app/src/main/res/layout/activity_encyclopedia.xml
@@ -28,22 +28,67 @@
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:animateLayoutChanges="true">
 
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:animateLayoutChanges="true"
                     android:orientation="vertical"
                     tools:context="com.gryzoniopedia.rodentshelper.ROOM.Medicaments.ViewMedicaments">
 
+
+                    <LinearLayout
+                        android:id="@+id/linearLayoutUpdateCheck"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:animateLayoutChanges="true"
+                        android:orientation="vertical"
+                        android:visibility="gone">
+
+                        <ProgressBar
+                            android:id="@+id/progressBarHorizontal_encyclopedia"
+                            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginEnd="20dp"
+                            android:indeterminateTint="#0375a8"
+                            android:visibility="visible">
+
+                        </ProgressBar>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="Sprawdzanie aktualizacji..."
+                            android:textColor="#014D70"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            android:visibility="visible" />
+
+                        <View
+                            android:id="@+id/view2"
+                            android:layout_width="match_parent"
+                            android:layout_height="5dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_marginBottom="5dp"
+                            android:background="#5397DF" />
+                    </LinearLayout>
 
                     <ProgressBar
                         android:id="@+id/progressBar_encyclopedia"
                         style="@android:style/Widget.Material.Light.ProgressBar.Large"
                         android:layout_width="fill_parent"
                         android:layout_height="100dp"
-                        android:layout_marginTop="40dp"
+                        android:layout_marginTop="20dp"
                         android:layout_weight="1"
                         android:clickable="true"
                         android:indeterminateTint="#0375a8"
@@ -55,8 +100,7 @@
                         android:id="@+id/textViewProgress_encyclopedia"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="25dp"
-                        android:layout_marginBottom="25dp"
+                        android:layout_marginTop="10dp"
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="Pobieranie..."
@@ -65,10 +109,39 @@
                         android:textStyle="bold"
                         android:visibility="gone" />
 
+                    <TextView
+                        android:id="@+id/textViewProgress_encyclopedia2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="Proszę czekać..."
+                        android:textColor="#014D70"
+                        android:textSize="20sp"
+                        android:visibility="gone" />
+
+                    <TextView
+                        android:id="@+id/textViewProgress_encyclopedia3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="20dp"
+                        android:layout_marginBottom="25dp"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="Okienko powinno zamknąć się automatycznie. \nProsimy o cierpliwość.\n\nPobieranie w niektórych przypadkach może trwać nawet do trzech minut. Jest to zależne od szybkości internetu oraz rodzaju urządzenia."
+                        android:textColor="#014D70"
+                        android:textSize="16sp"
+                        android:visibility="gone" />
+
                     <LinearLayout
                         android:id="@+id/linearLayout_encyclopedia"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:animateLayoutChanges="true"
                         android:background="#ACC5E1"
                         android:gravity="center_horizontal"
                         android:orientation="vertical"
@@ -261,7 +334,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Każda woliera lub klatka potrzebuje odpowiedniego wyposażenia, aby zadowolić zwierzę. Kategoria pozwala dowiedzieć się, w co należy się wyposażyć ."
+                                    android:text="Każda woliera lub klatka potrzebuje odpowiedniego wyposażenia, aby zadowolić zwierzę. Kategoria pozwala dowiedzieć się, w co należy się wyposażyć."
                                     android:textColor="#014D70" />
 
                             </LinearLayout>
