--- a/app/src/main/res/layout/vet_map.xml
+++ b/app/src/main/res/layout/vet_map.xml
@@ -14,12 +14,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:animateLayoutChanges="true"
         android:orientation="vertical">
 
         <include
             android:id="@+id/app_bar"
-            layout="@layout/app_bar_global">
-        </include>
+            layout="@layout/app_bar_global"></include>
 
 
         <LinearLayout
